Finished menus and starting to add discord bot.